--- a/index.html
+++ b/index.html
@@ -140,3 +140,7 @@
         </footer>
     </body>
 </html>
+<!--  жалоба валидатора
+Error: Attribute placeholder is only allowed when the input type is email, number, password, search, tel, text, or url.
+плэйсхолдер для даты и времени недопустим пишет
+warning на section без заголовков и на новые тэги(data time) -->
