--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </header>
 
-        <main class="container">
+        <div class="container">
             <div class="logo">
                 <img src="img/logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
             </div>
@@ -115,7 +115,7 @@
                     </div>
                 </section>
             </div>
-        </main>
+        </div>
 
         <footer class="main-footer">
             <div class="container clearfix">
