--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -93,7 +93,7 @@
                             <img src="http://placehold.it/150x100" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
-                            <a href="catalog-item.html" class="product-name">Набор для путешествий &laquo;Baxter of Californiа&raquo;</a>
+                            <a href="catalog-item.html" class="product-name">Набор для путешествий <span>&laquo;Baxter of Californiа&raquo;</span></a>
                             <span class="product-price">
                                 2900 руб.
                                 <a href="#" class="btn buy-accept">Купить</a>
@@ -106,7 +106,7 @@
                             <img src="http://placehold.it/150x100" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
-                            <a href="#" class="product-name">Увлажняющий кондиционер &laquo;Baxter of Californiа&raquo;</a>
+                            <a href="#" class="product-name">Увлажняющий кондиционер <span>&laquo;Baxter of Californiа&raquo;</span></a>
                             <span class="product-price">
                                 750 руб.
                                 <a href="#" class="btn buy-accept">Купить</a>
@@ -119,7 +119,7 @@
                             <img src="http://placehold.it/150x100" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
-                            <a href="#" class="product-name">Гель для волос &laquo;Suavecito&raquo;</a>
+                            <a href="#" class="product-name">Гель для волос <span>&laquo;Suavecito&raquo;</span></a>
                             <span class="product-price">
                                 290 руб.
                                 <a href="#" class="btn buy-accept">Купить</a>
@@ -132,7 +132,7 @@
                             <img src="http://placehold.it/150x100" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
-                            <a href="#" class="product-name">Глина для укладки волос &laquo;American Crew&raquo;</a>
+                            <a href="#" class="product-name">Глина для укладки волос <span>&laquo;American Crew&raquo;<span></a>
                             <span class="product-price">
                                 500 руб.
                                 <a href="#" class="btn buy-accept">Купить</a>
@@ -145,7 +145,7 @@
                             <img src="http://placehold.it/150x100" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
-                            <a href="#" class="product-name">Гель для волос &laquo;American Crew&raquo;</a>
+                            <a href="#" class="product-name">Гель для волос <span>&laquo;American Crew&raquo;<span></a>
                             <span class="product-price">
                                 300 руб.
                                 <a href="#" class="btn buy-accept">Купить</a>
@@ -158,7 +158,7 @@
                             <img src="http://placehold.it/150x100" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
-                            <a href="#" class="product-name">Набор для бритья &laquo;Baxter of Californiа&raquo;</a>
+                            <a href="#" class="product-name">Набор для бритья <span>&laquo;Baxter of Californiа&raquo;</span></a>
                             <span class="product-price">
                                 3900 руб.
                                 <a href="#" class="btn buy-accept">Купить</a>
