графика, текстовые стили

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Барбершоп «Бородинский»</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header class="main-header">
@@ -37,7 +38,7 @@
 
         <div class="container">
             <div class="logo">
-                <img src="img/logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
+                <img src="img/logo.png" width="368" height="204" alt="Барбершоп «Бородинский»" title="Барбершоп «Бородинский»">
             </div>
             <section class="features-row clearfix">
                 <div class="features-item">
@@ -75,7 +76,7 @@
                     <h2 class="content-column-title">Фотогалерея</h2>
                     <div class="gallery">
                         <figure class="gallery-content">
-                            <img src="img/photo-1.jpg" width="286" height="164" alt="">
+                            <img src="img/gallery-photo-1.jpg" width="286" height="164" alt="Барбершоп итерьер">
                         </figure>
                         <button class="btn gallery-prev">Назад</button>
                         <button class="btn gallery-next">Вперед</button>
@@ -101,7 +102,7 @@
                         <a href="#" class="btn">Обратная связь</a>
                         <div class="big-map-image">
                             <button class="closing-cross">&times;</button>
-                            <img src="#" alt="Как к нам проехать">
+                            <img src="img/big-map-image.jpg" width="767" height="561" alt="Как к нам проехать">
                         </div>
                     </div>
                 </section>
