--- a/pages/catalog-item.html
+++ b/pages/catalog-item.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Набор для путушествий &laquo;Baxter of Californiа&raquo;</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
@@ -61,38 +62,35 @@
 <!--  блок изображений  -->
                 <div class="item-images clearfix">
                     <div class="item-big-image">
-                        <img src="http://placehold.it/150x100" alt="big-item">
+                        <img src="../img/item-big-image-correct.jpg" width="460" height="498" alt="big-item">
                     </div>
                     <div class="item-preview-images clearfix">
-                        <a href="#">
-                            <img src="http://placehold.it/150x100" alt="preview-item">
-                        </a>
-                        <a href="#">
-                            <img src="http://placehold.it/150x100" alt="preview-item">
-                        </a>
-                        <a href="#">
-                            <img src="http://placehold.it/150x100" alt="preview-item">
-                        </a>
+                        <a href="#"><img src="../img/preview-item-1.jpg" width="140" height="149" alt="preview-item"></a>
+                        <a href="#"><img src="../img/preview-item-2.jpg" width="140" height="149" alt="preview-item"></a>
+                        <a href="#"><img src="../img/preview-item-3.jpg" width="140" height="149" alt="preview-item"></a>
                     </div>
                 </div>
 <!--  блок с описанием  -->
                 <div class="item-description clearfix">
-                    <p>Есть в наличии</p>
-                    <p class="item-article">Актикул: dexter-ae</p>
-                    <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-                    <span class="product-price">
-                        750 руб.
-                        <a href="#" class="btn buy-accept">Купить</a>
-                    </span>
-<!--  блок с набором оставить в общем блоке или вынести с классом  -->
-                    <h2>В набор входят:</h2>
-                    <ul>
-                        <li>Средство для умывания (50 мл)</li>
-                        <li>Увлажняющий крем (50 мл)</li>
-                        <li>Крем для бритья (50 мл)</li>
-                        <li>Крем после бритья, шампунь (50 мл)</li>
-                        <li>Удобная кожаная косметичка</li>
-                    </ul>
+                    <div class="item-description-detail"> 
+                        <p>Есть в наличии</p>
+                        <p class="item-article">Актикул: dexter-ae</p>
+                        <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+                        <span class="product-price">
+                            750 руб.
+                            <a href="#" class="btn buy-accept">Купить</a>
+                        </span>
+                    </div>
+                    <div class="item-description-contents">  
+                        <h2>В набор входят:</h2>
+                        <ul>
+                            <li>Средство для умывания (50 мл)</li>
+                            <li>Увлажняющий крем (50 мл)</li>
+                            <li>Крем для бритья (50 мл)</li>
+                            <li>Крем после бритья, шампунь (50 мл)</li>
+                            <li>Удобная кожаная косметичка</li>
+                        </ul>
+                    </div>    
                 </div>
             </div>
         </div>
