--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Магазин Барбершопа «Бородинский»</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
 <!--  хэдэр  -->
@@ -90,7 +91,7 @@
       отступ в цене стилизуем?  -->
                     <div class="catalog-product">
                         <div class="catalog-product-image">
-                            <img src="http://placehold.it/150x100" alt="продукт">
+                            <img src="../img/baxter-travel-set.jpg" width="220" height="165" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
                             <a href="catalog-item.html" class="product-name">Набор для путешествий <span>&laquo;Baxter of Californiа&raquo;</span></a>
@@ -103,7 +104,7 @@
 
                     <div class="catalog-product">
                         <div class="catalog-product-image">
-                            <img src="http://placehold.it/150x100" alt="продукт">
+                            <img src="../img/baxter-conditioner.jpg" width="220" height="165" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
                             <a href="#" class="product-name">Увлажняющий кондиционер <span>&laquo;Baxter of Californiа&raquo;</span></a>
@@ -116,7 +117,7 @@
 
                     <div class="catalog-product">
                         <div class="catalog-product-image">
-                            <img src="http://placehold.it/150x100" alt="продукт">
+                            <img src="../img/suavecito-hair-gel.jpg" width="220" height="165" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
                             <a href="#" class="product-name">Гель для волос <span>&laquo;Suavecito&raquo;</span></a>
@@ -129,7 +130,7 @@
 
                     <div class="catalog-product">
                         <div class="catalog-product-image">
-                            <img src="http://placehold.it/150x100" alt="продукт">
+                            <img src="../img/american-crew-clay.jpg" width="220" height="165" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
                             <a href="#" class="product-name">Глина для укладки волос <span>&laquo;American Crew&raquo;<span></a>
@@ -142,7 +143,7 @@
 
                     <div class="catalog-product">
                         <div class="catalog-product-image">
-                            <img src="http://placehold.it/150x100" alt="продукт">
+                            <img src="../img/american-crew-hair-gel.jpg" width="220" height="165" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
                             <a href="#" class="product-name">Гель для волос <span>&laquo;American Crew&raquo;<span></a>
@@ -155,7 +156,7 @@
 
                     <div class="catalog-product">
                         <div class="catalog-product-image">
-                            <img src="http://placehold.it/150x100" alt="продукт">
+                            <img src="../img/baxter-shaving-kit.jpg" width="220" height="165" alt="продукт">
                         </div>
                         <div class="catalog-product-description">
                             <a href="#" class="product-name">Набор для бритья <span>&laquo;Baxter of Californiа&raquo;</span></a>
