--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -8,7 +8,7 @@
     <body>
 <!--  хэдэр  -->
         <header class="main-header">
-            <div class="contаiner clearfix">
+            <div class="container clearfix">
                 <nav class="main-navigation">
                     <ul>
                         <li>
