русская с натворила бед)

--- a/pages/catalog-item.html
+++ b/pages/catalog-item.html
@@ -9,7 +9,7 @@
     <body>
 <!--  хэдэр  -->
         <header class="main-header">
-            <div class="contаiner clearfix">
+            <div class="container clearfix">
                 <nav class="main-navigation">
                     <ul>
                         <li>
