--- a/pages/catalog-item.html
+++ b/pages/catalog-item.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Набор для путушествий &laquo;Baxter of Californiа&raquo;</title>
+        <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/style.css">
     </head>
 
@@ -16,7 +18,7 @@
                             <a href="../index.html">Главная</a>
                         </li>
                         <li>
-                            <a href="#">Информацмя</a>
+                            <a href="#">Информация</a>
                         </li>
                         <li>
                             <a href="#">Новости</a>
