--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Магазин Барбершопа «Бородинский»</title>
+        <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+       	<link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
@@ -15,7 +17,7 @@
                             <a href="../index.html">Главная</a>
                         </li>
                         <li>
-                            <a href="#">Информацмя</a>
+                            <a href="#">Информация</a>
                         </li>
                         <li>
                             <a href="#">Новости</a>
